--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,20 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" ?>
 <Shell
     x:Class="MauiApp1.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MauiApp1"
-    Shell.FlyoutBehavior="Flyout">
+    xmlns:local="clr-namespace:MauiApp1">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
-    <ShellContent
-        Title="Second Page"
-        ContentTemplate="{DataTemplate local:SecondPage}"
-        Route="SecondPage" />
+    <ShellContent Title="Inicio" ContentTemplate="{DataTemplate local:LoginPage}" />
 </Shell>
 
 
